save metadata, simplified code